--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
   z-index: 1;
 }
 h1 {
+  user-select: none;
   font-family: "Poppins", sans-serif;
   font-size: 50px;
   position: absolute;
